--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 // This is a plain html page that automatically loads pages from earth.nullschool.net
 // periodically so that they can be captured by CamStudio.
 // Written by Shufeng Tan <shufengtan@gmail.com> on March 29, 2014
-var nullschool = "http://earth.nullschool.net";
+var nullschool = "https://earth.nullschool.net";
 var loc_zoom = "/orthographic=-60,40,1600";
 var config = {
     'wind': {
