--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ function set_url(mode, epoch_ms){
     if (doc_url.match(/[#\/]t/)) {
         what += "/overlay=temp";
     }
-    match = /[#\/](-?\d{1,3},-?\d{1,2},\d{2,4})/.exec(doc_url);
+    match = /[#\/](-?\d{1,3}(|\.\d*),-?\d{1,2}(|\.\d*),\d{2,4})/.exec(doc_url);
     if (match) {
       loc_zoom = "/orthographic=" + match[1];
     }
